# apps/server/lib/keepling_web/router.ex
@@ -86,6 +86,7 @@ defmodule KeeplingWeb.Router do
     post "/commands/edit-task-dates", CommandController, :edit_task_dates
     post "/commands/plan-for-today", CommandController, :plan_for_today
     post "/commands/unplan-task", CommandController, :unplan_task
+    post "/commands/undo-task", CommandController, :undo_task
     post "/commands/move-today-task", TaskViewController, :move_today
     post "/commands/create-organization", CommandController, :create_organization
     post "/commands/rename-organization", CommandController, :rename_organization
